tdf#146145 sw: 1-click Accept/Reject of table row changes

Now context menu of a changed table row shows Accept Change/
Reject Change menu items, which accept or reject
the deletion or insertion of the table row.
Also Accept Change/Reject Change icons of the Track Changes
toolbar are enabled, and do the same, if the cursor is not
before or in a tracked change.

Add the following labels to the Undo actions:

"Accept change: Row Inserted"
"Accept change: Row Deleted"
"Reject change: Row Inserted"
"Reject change: Row Deleted"

Change-Id: I12ae0158d059b044e430cc0ab86f0cf8931eadd0